add cypress for functionnal testing

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@bimdata/bimdata-api-client": "^1.0.22",
@@ -40,6 +41,7 @@
     "cross-env": "^5.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "cypress": "^3.0.1",
     "eslint": "4.x",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
