--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.5.2",
     "vue-i18n": "^7.8.0",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
