Add import script for poeditor

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
     "build": "node build/build.js",
     "cypress:open": "cypress open",
-    "mocha": "mocha --compilers js:babel-core/register test/unit/specs/**/*.js"
+    "mocha": "mocha --compilers js:babel-core/register test/unit/specs/**/*.js",
+    "export-translations": "node build/sync-translations.js"
   },
   "dependencies": {
     "@bimdata/bimdata-api-client": "^1.0.25",
