--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cypress:open": "cypress open",
     "mocha": "mocha --compilers js:babel-core/register test/unit/specs/**/*.js",
     "export-translations": "node build/sync-translations.js",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run --browser chrome"
   },
   "dependencies": {
     "@bimdata/bimdata-api-client": "^1.0.25",
