--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,5 +21,4 @@ jobs:
 
       # run tests!
       - run: mv config/bim.env.js.test config/bim.env.js
-      - run: npm start && wait-on http://localhost:8080
-      - run: npm run cypress:run
+      - run: npm start && wait-on http://localhost:8080 && npm run cypress:run
