--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,10 @@ jobs:
       - save_cache:
           key: v1-dependencies-npm-{{ checksum "package-lock.json" }}
           paths:
-            - node_modules/
             - ~/.npm
             - ~/.cache
+
+      - store_artifacts:
+          path: cypress/videos
+      - store_artifacts:
+          path: cypress/screenshots
