--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ yarn-debug.log*
 yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
+
+!cypress/videos/.gitkeep
+cypress/videos/*
+
+!cypress/screenshots/.gitkeep
+cypress/screenshots/*
+
 selenium-debug.log
 config/bim.env.js
 # Editor directories and files
