--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,5 @@ jobs:
           path: cypress/videos
       - store_artifacts:
           path: cypress/screenshots
+      - store_test_results:
+          path: results
