--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cypress:open": "cypress open",
     "mocha": "mocha --compilers js:babel-core/register test/unit/specs/**/*.js",
     "export-translations": "node build/sync-translations.js",
-    "cypress:run": "cypress run",
+    "cypress:run": "cypress run --reporter mocha-multi-reporters --record --reporter-options configFile=config/test-report.json",
     "cypress:install": "cypress install",
     "cypress:test": "start-server-and-test start http-get://localhost:8080 cypress:run"
   },
@@ -74,6 +74,8 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
+    "mocha-junit-reporter": "^1.17.0",
+    "mocha-multi-reporters": "^1.1.7",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.9.0",
