right path for test report

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,4 +30,4 @@ jobs:
       - store_artifacts:
           path: cypress/screenshots
       - store_test_results:
-          path: results
+          path: multiple-results
