--- a/package.json
+++ b/package.json
@@ -24,16 +24,8 @@
   },
   "dependencies": {
     "@bimdata/bimdata-api-client": "^1.0.25",
-    "axios": "^0.18.0",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "vue": "^2.5.2",
-    "vue-i18n": "^7.8.0",
-    "vue-router": "^3.0.1",
-    "vuelidate": "^0.7.4",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "8",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -45,14 +37,12 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chai": "^4.1.2",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
-    "cypress": "^3.0.1",
     "eslint": "4.x",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -67,6 +57,35 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "inject-loader": "^3.0.0",
+    "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "postcss-url": "^7.2.1",
+    "rimraf": "^2.6.0",
+    "sass-loader": "^7.0.3",
+    "shelljs": "^0.7.6",
+    "svgo": "^1.0.5",
+    "uglifyjs-webpack-plugin": "^1.1.1",
+    "url-loader": "^0.5.8",
+    "vue": "^2.5.2",
+    "vue-i18n": "^7.8.0",
+    "vue-loader": "^13.3.0",
+    "vue-router": "^3.0.1",
+    "vue-style-loader": "^3.0.1",
+    "vue-svgicon": "^2.1.4",
+    "vue-template-compiler": "^2.5.2",
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.0.1",
+    "webpack": "^3.6.0",
+    "webpack-merge": "^4.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chromedriver": "^2.27.2",
+    "cypress": "^3.0.1",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -81,34 +100,15 @@
     "mocha-multi-reporters": "^1.1.7",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.9.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^7.0.3",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.8.0",
     "start-server-and-test": "^1.4.1",
-    "svgo": "^1.0.5",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-svgicon": "^2.1.4",
-    "vue-template-compiler": "^2.5.2",
     "wait-on": "^2.1.0",
-    "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-dev-server": "^2.9.1"
   },
   "engines": {
     "node": ">= 6.0.0",
