--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -1,14 +1,21 @@
-FROM node:10 as builder
+FROM nginx:stable
+
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive \
+	apt-get -y --no-install-recommends install wget apt-transport-https ca-certificates && \
+    wget https://raw.githubusercontent.com/visionmedia/n/master/bin/n -O /usr/local/bin/n && \
+    chmod +x /usr/local/bin/n && \
+    n 10
+
+ENV NODE_ENV production
 WORKDIR /opt
-ENV NODE_ENV=production
 ADD package.json /opt
 ADD package-lock.json /opt
 RUN npm install
 
 COPY ./ /opt
-ENV APP_ENV=staging
-RUN npm run build
 
+RUN rm -rf /usr/share/nginx/html && \
+    ln -s /opt/dist /usr/share/nginx/html
 
-FROM nginx:stable
-COPY --from=builder /opt/dist /usr/share/nginx/html
+ENTRYPOINT ["/opt/entrypoint.sh"]
