--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -2,7 +2,7 @@ FROM nginx:stable
 
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive \
-	apt-get -y --no-install-recommends install wget apt-transport-https ca-certificates && \
+	apt-get -y --no-install-recommends install wget ca-certificates && \
     wget https://raw.githubusercontent.com/visionmedia/n/master/bin/n -O /usr/local/bin/n && \
     chmod +x /usr/local/bin/n && \
     n 10
