create first select component, add vue click away and components page

--- a/package.json
+++ b/package.json
@@ -73,9 +73,11 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue": "^2.5.2",
+    "vue-clickaway": "^2.2.2",
     "vue-i18n": "^7.8.0",
     "vue-loader": "^13.3.0",
     "vue-router": "^3.0.1",
+    "vue-select": "^2.4.0",
     "vue-style-loader": "^3.0.1",
     "vue-svgicon": "^2.1.4",
     "vue-template-compiler": "^2.5.2",
