--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "fs": "0.0.1-security",
     "html-webpack-plugin": "^2.30.1",
     "inject-loader": "^3.0.0",
+    "leaflet": "^1.3.3",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
