--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ references:
   container_config: &container_config
     docker:
       - image: cypress/base:8
-    working_directory: ~/repo
+    working_directory: /home/circleci/repo
 
   restore_repo: &restore_repo
     restore_cache:
@@ -30,8 +30,8 @@ jobs:
       - *restore_repo
       - restore_cache: #Download and cache dependencies
           keys:
-            - v1-dependencies-npm-{{ checksum "package-lock.json" }}
-            - v1-dependencies-npm
+            - v2-dependencies-npm-{{ checksum "package-lock.json" }}
+            - v2-dependencies-npm
 
       - run: npm ci
 
@@ -41,7 +41,7 @@ jobs:
       - run: npm run cypress:test
 
       - save_cache:
-          key: v1-dependencies-npm-{{ checksum "package-lock.json" }}
+          key: v2-dependencies-npm-{{ checksum "package-lock.json" }}
           paths:
             - ~/.npm
             - ~/.cache
@@ -58,6 +58,14 @@ jobs:
     steps:
       - *restore_repo
       - setup_remote_docker
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.09.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
       - run:
           name: push to docker hub
           command: |
