--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "html-webpack-plugin": "^2.30.1",
     "inject-loader": "^3.0.0",
     "leaflet": "^1.3.3",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
