--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "uppy": "^0.26.0",
     "url-loader": "^0.5.8",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.5.2",
     "vue-clickaway": "^2.2.2",
     "vue-i18n": "^7.8.0",
