--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "vue-template-compiler": "^2.5.2",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1",
+    "vuex-oidc": "^1.5.11",
     "webpack": "^3.6.0",
     "webpack-merge": "^4.1.0"
   },
