--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
@@ -38,14 +38,12 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
-    "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
-    "eslint": "4.x",
+    "eslint": "4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
@@ -62,7 +60,7 @@
     "inject-loader": "^3.0.0",
     "leaflet": "^1.3.3",
     "moment": "^2.22.2",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -70,7 +68,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^7.1.0",
     "scriptjs": "^2.5.8",
     "shelljs": "^0.7.6",
     "svgo": "^1.0.5",
@@ -94,29 +92,20 @@
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
+    "babel-jest": "^23.6.0",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-register": "^6.22.0",
     "chai": "^4.1.2",
     "chromedriver": "^2.27.2",
+    "cross-spawn": "^5.0.1",
     "cypress": "^3.0.1",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.2",
-    "mocha": "^3.2.0",
-    "mocha-junit-reporter": "^1.17.0",
-    "mocha-multi-reporters": "^1.1.7",
+    "jest-serializer-vue": "^2.0.2",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
-    "phantomjs-prebuilt": "^2.1.14",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "sinon": "^4.0.0",
-    "sinon-chai": "^2.8.0",
     "start-server-and-test": "^1.4.1",
+    "vue-jest": "^3.0.2",
     "wait-on": "^2.1.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1"
