--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "chai": "^4.1.2",
     "chromedriver": "^2.27.2",
     "cross-spawn": "^5.0.1",
+    "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
