--- a/package.json
+++ b/package.json
@@ -1,118 +1,90 @@
 {
   "name": "bim",
   "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "",
-  "private": true,
+  "description": "A Vuejs using Webpack 4",
+  "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js",
-    "cypress:open": "cypress open",
-    "mocha": "mocha --compilers js:babel-core/register test/unit/specs/**/*.js",
-    "export-translations": "node build/sync-translations.js",
+    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js",
+    "build": "webpack --config build/webpack.config.prod.js",
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --ext .js,.vue src --fix",
+    "test": "jest --config test/jest.config.js",
+    "test:debug": "node --inspect node_modules/.bin/jest --runInBand --config test/jest.config.js",
     "generate-icons": "vsvg -s ./src/assets/images/icons/compiled -t ./src/icons --es6",
     "optimize-svg": "svgo -f ./src/assets/images/icons -o ./src/assets/images/icons/compiled",
     "import-material-icon": "node build/get-material-icons.js",
     "svg-process": "npm run import-material-icon && npm run optimize-svg && npm run generate-icons"
   },
+  "keywords": [
+    "Vue",
+    "Webpack 4"
+  ],
+  "author": "Bimdata",
+  "license": "MIT",
   "dependencies": {
     "@bimdata/bimdata-api-client": "^2.8.3",
-    "@mdi/svg": "^2.5.94",
-    "autoprefixer": "^7.1.2",
     "axios": "^0.18.0",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "8",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.1",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.0",
-    "eslint": "4.15.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "fs": "0.0.1-security",
-    "html-webpack-plugin": "^2.30.1",
-    "inject-loader": "^3.0.0",
-    "moment": "^2.22.2",
-    "node-sass": "^4.11.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^7.1.0",
-    "scriptjs": "^2.5.8",
-    "shelljs": "^0.7.6",
-    "svgo": "^1.0.5",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "uppy": "^0.26.0",
-    "url-loader": "^0.5.8",
+    "leaflet": "^1.4.0",
+    "moment": "^2.24.0",
+    "scriptjs": "^2.5.9",
+    "uppy": "^0.29.1",
     "velocity-animate": "^1.5.2",
-    "vue": "^2.5.2",
+    "vue": "^2.5.22",
     "vue-clickaway": "^2.2.2",
-    "vue-i18n": "^7.8.0",
-    "vue-loader": "^13.3.0",
-    "vue-router": "^3.0.1",
-    "vue-select": "^2.4.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-svgicon": "^2.1.4",
-    "vue-template-compiler": "^2.5.2",
-    "vuelidate": "^0.7.4",
-    "vuex": "^3.0.1",
-    "vuex-oidc": "^1.5.11",
-    "webpack": "^3.6.0",
-    "webpack-merge": "^4.1.0"
+    "vue-i18n": "^8.8.0",
+    "vue-router": "^3.0.2",
+    "vue-select": "^2.5.1",
+    "vue-svgicon": "^3.2.2",
+    "vuex": "^3.1.0",
+    "vuex-oidc": "^1.5.11"
   },
   "devDependencies": {
-    "babel-jest": "^23.6.0",
-    "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-register": "^6.22.0",
-    "chai": "^4.1.2",
-    "chromedriver": "^2.27.2",
-    "cross-spawn": "^5.0.1",
-    "jest": "^23.6.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/runtime": "^7.3.1",
+    "@mdi/svg": "^3.4.93",
+    "@vue/test-utils": "^1.0.0-beta.28",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.0.0",
+    "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.12.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "imports-loader": "^0.8.0",
+    "jest": "^24.0.0",
     "jest-serializer-vue": "^2.0.2",
-    "nightwatch": "^0.9.12",
-    "node-notifier": "^5.1.2",
-    "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
-    "start-server-and-test": "^1.4.1",
+    "lodash": "^4.17.11",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "oidc-client": "^1.5.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "svgo": "^1.1.1",
+    "uglify-es": "^3.3.9",
+    "url-loader": "^1.1.2",
+    "vsvg": "^1.9.1",
     "vue-jest": "^3.0.2",
-    "wait-on": "^2.1.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "vue-loader": "^15.6.2",
+    "vue-server-renderer": "^2.5.22",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.22",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
+  }
 }
