Fix test command name

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "webpack --config build/webpack.config.prod.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
-    "test": "jest --config test/jest.config.js",
-    "test:debug": "node --inspect node_modules/.bin/jest --runInBand --config test/jest.config.js",
+    "unit": "jest --config test/jest.config.js",
+    "unit:debug": "node --inspect node_modules/.bin/jest --runInBand --config test/jest.config.js",
     "generate-icons": "vsvg -s ./src/assets/images/icons/compiled -t ./src/icons --es6",
     "optimize-svg": "svgo -f ./src/assets/images/icons -o ./src/assets/images/icons/compiled",
     "import-material-icon": "node build/get-material-icons.js",
