--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,11 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/test/unit/coverage/
-/test/e2e/reports/
+/test/coverage/
 
 !cypress/videos/.gitkeep
 cypress/videos/**
 
-!cypress/screenshots/.gitkeep
-cypress/screenshots/*
 !/src/assets/images/icons/compiled/.gitkeep
 /src/assets/images/icons/compiled
 selenium-debug.log
