--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/test/coverage/
+/test/unit/coverage/
+/test/e2e/reports
+selenium-server.log
 
 !cypress/videos/.gitkeep
 cypress/videos/**
