--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "build": "webpack --config build/webpack.config.prod.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
-    "unit": "jest --config test/jest.config.js",
+    "unit": "jest --config test/unit/jest.config.js",
     "unit:debug": "node --inspect node_modules/.bin/jest --runInBand --config test/jest.config.js",
-    "test": "npm run unit",
+    "e2e": "node test/e2e/runner.js",
+    "test": "npm run unit && npm run e2e",
     "generate-icons": "vsvg -s ./src/assets/images/icons/compiled -t ./src/icons --es6",
     "optimize-svg": "svgo -f ./src/assets/images/icons -o ./src/assets/images/icons/compiled",
     "import-material-icon": "node build/get-material-icons.js",
@@ -23,7 +24,7 @@
   "author": "Bimdata",
   "license": "MIT",
   "dependencies": {
-    "@bimdata/bimdata-api-client": "^2.8.3",
+    "@bimdata/bimdata-api-client": "^3.0.0",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "leaflet": "^1.4.0",
@@ -43,8 +44,10 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.1",
     "@mdi/svg": "^3.4.93",
     "@vue/test-utils": "^1.0.0-beta.28",
@@ -54,6 +57,7 @@
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "chromedriver": "^2.46.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "eslint": "^5.12.1",
@@ -70,9 +74,11 @@
     "jest-serializer-vue": "^2.0.2",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.5.0",
+    "nightwatch": "^1.0.19",
     "node-sass": "^4.11.0",
     "oidc-client": "^1.5.4",
     "sass-loader": "^7.1.0",
+    "selenium-server": "^3.141.59",
     "style-loader": "^0.23.1",
     "svgo": "^1.1.1",
     "uglify-es": "^3.3.9",
