--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "chromedriver": "^2.46.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
