--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+BD_APP_URL=http://localhost:8080
 BD_OIDC_IP=https://login-staging.bimdata.io
 BD_OIDC_CLIENT_ID=952974
 BD_API_BASE_URL=https://api-staging.bimdata.io
