--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,10 +49,10 @@ jobs:
             docker push bimdata/platform:latest
 
             docker exec -it deployment ansible-playbook build.yml -i inventories/next --tags=platform --extra-vars='{"context_dir":"/var/repo","ansible_ssh_private_key_file":"./files/deploy_rsa"}' --user=deploy
-            docker push bimdata/platform:next
+            docker push bimdata/platform:staging
 
             docker exec -it deployment ansible-playbook build.yml -i inventories/prod --tags=platform --extra-vars='{"context_dir":"/var/repo","ansible_ssh_private_key_file":"./files/deploy_rsa"}' --user=deploy
-            docker push bimdata/platform:prod
+            docker push bimdata/platform:next
 
             # deploy master branch
             docker exec -it deployment ansible-playbook deploy.yml -i inventories/staging --tags=platform --extra-vars "ansible_ssh_private_key_file=./files/deploy_rsa" --user=deploy
