--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "@bimdata/bimdata-api-client": "^3.2.0",
+    "@bimdata/utils": "^0.1.3",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "isemail": "^3.2.0",
@@ -69,6 +70,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.1.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
     "jest": "^24.0.0",
@@ -78,6 +80,7 @@
     "nightwatch": "^1.0.19",
     "node-sass": "^4.11.0",
     "oidc-client": "^1.5.4",
+    "resolve-url-loader": "^3.0.1",
     "sass-loader": "^7.1.0",
     "selenium-server": "^3.141.59",
     "style-loader": "^0.23.1",
