--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "mapbox-gl": "^0.53.1",
     "moment": "^2.24.0",
     "scriptjs": "^2.5.9",
-    "uppy": "^0.26.0",
+    "uppy": "0.26.0",
     "velocity-animate": "^1.5.2",
     "vue": "^2.5.22",
     "vue-clickaway": "^2.2.2",
@@ -80,7 +80,7 @@
     "mini-css-extract-plugin": "^0.5.0",
     "nightwatch": "^1.0.19",
     "node-sass": "^4.11.0",
-    "oidc-client": "^1.5.4",
+    "oidc-client": "1.5.4",
     "resolve-url-loader": "^3.0.1",
     "sass-loader": "^7.1.0",
     "selenium-server": "^3.141.59",
