--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "@bimdata/bimdata-api-client": "^3.3.5",
-    "@bimdata/utils": "^0.2.3",
+    "@bimdata/utils": "^0.2.10",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "isemail": "^3.2.0",
@@ -40,6 +40,7 @@
     "vue-router": "^3.0.2",
     "vue-select": "^2.5.1",
     "vue-svgicon": "^3.2.2",
+    "vuedarkmode": "^0.3.23",
     "vuex": "^3.1.0",
     "vuex-oidc": "^1.5.11"
   },
