Remove errors overlay caused by eslint while developing and add precommit hooks with eslint

--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "echo YOLO"
+      "pre-commit": "eslint --ext .js,.vue src"
     }
   }
 }
