--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@bimdata/bimdata-api-client": "^4.0.3",
     "@bimdata/utils": "^0.2.3",
+    "@bimdata/viewer": "0.1.4",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "isemail": "^3.2.0",
