--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "mapbox-gl": "^0.53.1",
     "moment": "^2.24.0",
     "scriptjs": "^2.5.9",
-    "uppy": "0.26.0",
+    "uppy": "^1.3.0",
     "velocity-animate": "^1.5.2",
     "vue": "^2.5.22",
     "vue-clickaway": "^2.2.2",
