--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Vuejs using Webpack 4",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js",
+    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js --port 8082",
     "build": "webpack --config build/webpack.config.prod.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
@@ -41,7 +41,8 @@
     "vue-select": "^2.5.1",
     "vue-svgicon": "^3.2.2",
     "vuex": "^3.1.0",
-    "vuex-oidc": "^1.5.11"
+    "vuex-oidc": "^3.0.0",
+    "oidc-client": "^1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -80,7 +81,6 @@
     "mini-css-extract-plugin": "^0.5.0",
     "nightwatch": "^1.0.19",
     "node-sass": "^4.11.0",
-    "oidc-client": "1.5.4",
     "resolve-url-loader": "^3.0.1",
     "sass-loader": "^7.1.0",
     "selenium-server": "^3.141.59",
