--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Vuejs using Webpack 4",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js",
+    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js --port 8082",
     "build": "webpack --config build/webpack.config.prod.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@bimdata/bimdata-api-client": "^4.0.3",
     "@bimdata/utils": "^0.2.3",
-    "@bimdata/viewer": "0.1.4",
+    "@bimdata/viewer": "0.1.14",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "isemail": "^3.2.0",
