--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Vuejs using Webpack 4",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js --port 8082",
+    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js --port 8080",
     "build": "webpack --config build/webpack.config.prod.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
@@ -24,80 +24,80 @@
   "author": "Bimdata",
   "license": "MIT",
   "dependencies": {
-    "@bimdata/bimdata-api-client": "^4.0.3",
-    "@bimdata/utils": "^0.2.3",
+    "@bimdata/bimdata-api-client": "^4.1.1",
+    "@bimdata/utils": "0.2.3",
     "@bimdata/viewer": "0.1.14",
-    "axios": "^0.18.0",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "axios": "^0.18.1",
+    "bootstrap-vue": "^2.0.0-rc.28",
     "isemail": "^3.2.0",
     "mapbox-gl": "^0.53.1",
     "moment": "^2.24.0",
     "scriptjs": "^2.5.9",
     "uppy": "0.26.0",
     "velocity-animate": "^1.5.2",
-    "vue": "^2.5.22",
+    "vue": "^2.6.10",
     "vue-clickaway": "^2.2.2",
-    "vue-i18n": "^8.8.0",
-    "vue-router": "^3.0.2",
-    "vue-select": "^2.5.1",
-    "vue-svgicon": "^3.2.2",
-    "vuex": "^3.1.0",
-    "vuex-oidc": "^1.5.11"
+    "vue-i18n": "^8.14.0",
+    "vue-router": "^3.1.2",
+    "vue-select": "^2.6.4",
+    "vue-svgicon": "^3.2.6",
+    "vuex": "^3.1.1",
+    "vuex-oidc": "1.12.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.3.1",
-    "@mdi/svg": "^3.4.93",
-    "@vue/test-utils": "^1.0.0-beta.28",
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@mdi/svg": "^3.9.97",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.0.0",
-    "babel-loader": "^8.0.5",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "chromedriver": "^2.46.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.1",
     "dotenv-webpack": "^1.7.0",
-    "eslint": "^5.12.1",
+    "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.15.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
-    "jest": "^24.0.0",
+    "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.5.0",
-    "nightwatch": "^1.0.19",
-    "node-sass": "^4.11.0",
+    "nightwatch": "^1.2.1",
+    "node-sass": "^4.12.0",
     "oidc-client": "1.5.4",
-    "resolve-url-loader": "^3.0.1",
-    "sass-loader": "^7.1.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^7.3.1",
     "selenium-server": "^3.141.59",
     "style-loader": "^0.23.1",
-    "svgo": "^1.1.1",
+    "svgo": "^1.3.0",
     "uglify-es": "^3.3.9",
     "url-loader": "^1.1.2",
     "vsvg": "^1.9.1",
-    "vue-jest": "^3.0.2",
-    "vue-loader": "^15.6.2",
-    "vue-server-renderer": "^2.5.22",
+    "vue-jest": "^3.0.4",
+    "vue-loader": "^15.7.1",
+    "vue-server-renderer": "^2.6.10",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.22",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0",
     "webpack-merge": "^4.2.1"
   }
 }
