--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint:fix": "eslint --ext .js,.vue src --fix",
     "unit": "jest --config test/unit/jest.config.js",
     "unit:debug": "node --inspect node_modules/.bin/jest --runInBand --config test/jest.config.js",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
+    "test": "npm run unit",
     "generate-icons": "vsvg -s ./src/assets/images/icons/compiled -t ./src/icons --es6",
     "optimize-svg": "svgo -f ./src/assets/images/icons -o ./src/assets/images/icons/compiled",
     "import-material-icon": "node build/get-material-icons.js",
@@ -26,7 +25,7 @@
   "dependencies": {
     "@bimdata/bimdata-api-client": "^4.1.1",
     "@bimdata/utils": "0.2.3",
-    "@bimdata/viewer": "0.1.16",
+    "@bimdata/viewer": "0.1.19",
     "axios": "^0.18.1",
     "bootstrap-vue": "^2.0.0-rc.28",
     "isemail": "^3.2.0",
@@ -80,7 +79,6 @@
     "jest-serializer-vue": "^2.0.2",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.5.0",
-    "nightwatch": "^1.2.1",
     "node-sass": "^4.12.0",
     "oidc-client": "1.5.4",
     "resolve-url-loader": "^3.1.0",
