--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "scriptjs": "^2.5.9",
     "uppy": "0.26.0",
     "velocity-animate": "^1.5.2",
-    "vue": "^2.6.10",
+    "vue": "2.5.22",
     "vue-clickaway": "^2.2.2",
     "vue-i18n": "^8.14.0",
     "vue-router": "^3.1.2",
@@ -91,9 +91,9 @@
     "vsvg": "^1.9.1",
     "vue-jest": "^3.0.4",
     "vue-loader": "^15.7.1",
-    "vue-server-renderer": "^2.6.10",
+    "vue-server-renderer": "2.5.22",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "2.5.22",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
