--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
     "husky": "^2.7.0",
     "imports-loader": "^0.8.0",
     "jest": "^24.9.0",
@@ -94,6 +93,7 @@
     "vue-server-renderer": "2.5.22",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "2.5.22",
+    "web-webpack-plugin": "^4.6.6",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0",
