--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
     "isemail": "^3.2.0",
     "mapbox-gl": "^0.53.1",
     "moment": "^2.24.0",
+    "oidc-client": "^1.9.1",
     "scriptjs": "^2.5.9",
     "uppy": "0.26.0",
     "velocity-animate": "^1.5.2",
     "vue": "2.5.22",
     "vue-clickaway": "^2.2.2",
-    "vuex-oidc": "^3.1.1",
-    "oidc-client": "^1.9.1",
     "vue-i18n": "^8.14.0",
     "vue-router": "^3.1.3",
     "vue-select": "^2.6.4",
     "vue-svgicon": "^3.2.6",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-oidc": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -73,6 +73,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^2.7.0",
     "imports-loader": "^0.8.0",
     "jest": "^24.9.0",
@@ -93,7 +94,6 @@
     "vue-server-renderer": "2.5.22",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "2.5.22",
-    "web-webpack-plugin": "^4.6.6",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0",
