update viewer version and fix breaking changes
new API for BIMDataViewer 0.3.0

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 BD_APP_URL=http://localhost:8080
 BD_OIDC_IP=https://iam-staging.bimdata.io
-BD_CONNECT_URL=https://login-staging.bimdata.io
+BD_CONNECT_URL=https://iam-staging.bimdata.io
 BD_OIDC_CLIENT_ID=952974
 BD_API_BASE_URL=https://api-staging.bimdata.io
 BD_CDN_BASE_URL=https://cdn-staging.bimdata.io
