--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "@bimdata/bimdata-api-client": "^5.0.6",
+    "@bimdata/snowflakes-viewer-plugin": "0.0.5",
     "@bimdata/utils": "0.2.3",
     "@bimdata/viewer": "0.4.1",
     "axios": "^0.19.0",
@@ -35,7 +36,7 @@
     "scriptjs": "^2.5.9",
     "uppy": "0.26.0",
     "velocity-animate": "^1.5.2",
-    "vue": "2.5.22",
+    "vue": "^2.5.22",
     "vue-clickaway": "^2.2.2",
     "vue-i18n": "^8.14.0",
     "vue-router": "^3.1.3",
@@ -91,9 +92,9 @@
     "vsvg": "^1.9.1",
     "vue-jest": "^3.0.4",
     "vue-loader": "^15.7.1",
-    "vue-server-renderer": "2.5.22",
+    "vue-server-renderer": "^2.5.22",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "2.5.22",
+    "vue-template-compiler": "^2.5.22",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0",
