--- a/etc/Dockerfile
+++ b/etc/Dockerfile
@@ -34,4 +34,6 @@ RUN npm run build
 
 
 FROM nginx:stable
+RUN rm /etc/nginx/conf.d/default.conf
+COPY etc/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=0 /opt/dist /usr/share/nginx/html
