--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "author": "Bimdata",
   "license": "MIT",
   "dependencies": {
-    "@bimdata/bimdata-api-client": "^5.6.0",
+    "@bimdata/bimdata-api-client": "~6.2.0",
     "@bimdata/utils": "0.2.3",
     "@bimdata/viewer": "0.7.7",
     "axios": "^0.19.0",
