--- a/package.json
+++ b/package.json
@@ -26,37 +26,37 @@
     "@bimdata/bimdata-api-client": "~6.2.0",
     "@bimdata/utils": "0.2.3",
     "@bimdata/viewer": "0.7.8",
-    "axios": "^0.19.0",
-    "bootstrap-vue": "^2.0.0-rc.28",
+    "axios": "^0.19.2",
+    "bootstrap-vue": "^2.5.0",
     "isemail": "^3.2.0",
     "mapbox-gl": "^0.53.1",
     "moment": "^2.24.0",
-    "oidc-client": "^1.9.1",
+    "oidc-client": "^1.10.1",
     "scriptjs": "^2.5.9",
     "seedrandom": "^3.0.5",
     "uppy": "0.26.0",
     "velocity-animate": "^1.5.2",
     "vue": "2.5.22",
     "vue-clickaway": "^2.2.2",
-    "vue-i18n": "^8.14.0",
-    "vue-router": "^3.1.3",
+    "vue-i18n": "^8.15.4",
+    "vue-router": "^3.1.6",
     "vue-select": "^2.6.4",
     "vue-svgicon": "^3.2.6",
-    "vuex": "^3.1.1",
-    "vuex-oidc": "^3.2.0"
+    "vuex": "^3.1.2",
+    "vuex-oidc": "^3.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.8.3",
+    "@babel/runtime": "^7.8.4",
     "@mdi/svg": "^3.9.97",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.0.0-beta.31",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
@@ -68,7 +68,7 @@
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
@@ -81,23 +81,23 @@
     "jest-serializer-vue": "^2.0.2",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.12.0",
-    "resolve-url-loader": "^3.1.0",
+    "node-sass": "^4.13.1",
+    "resolve-url-loader": "^3.1.1",
     "sass-loader": "^7.3.1",
     "selenium-server": "^3.141.59",
     "style-loader": "^0.23.1",
-    "svgo": "^1.3.0",
+    "svgo": "^1.3.2",
     "uglify-es": "^3.3.9",
     "url-loader": "^1.1.2",
     "vsvg": "^1.9.1",
-    "vue-jest": "^3.0.4",
-    "vue-loader": "^15.7.1",
+    "vue-jest": "^3.0.5",
+    "vue-loader": "^15.9.0",
     "vue-server-renderer": "2.5.22",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "2.5.22",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
   },
   "husky": {
