--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bim",
+  "name": "bimdata-platform",
   "version": "1.0.0",
-  "description": "A Vuejs using Webpack 4",
+  "description": "BIMData.io Platform",
   "main": "index.js",
   "scripts": {
     "serve": "NODE_OPTIONS=--max_old_space_size=4096 webpack-dev-server --progress --config build/webpack.config.dev.js --port 8080",
@@ -27,7 +27,7 @@
     "@bimdata/bimobject-viewer-plugin": "^0.2.1",
     "@bimdata/gltf-extractor-viewer-plugin": "^0.0.2",
     "@bimdata/utils": "0.2.3",
-    "@bimdata/viewer": "0.7.21",
+    "@bimdata/viewer": "0.7.24",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.28",
     "isemail": "^3.2.0",
