add BD_MAX_UPLOAD_SIZE arg in dockerfile

--- a/etc/Dockerfile
+++ b/etc/Dockerfile
@@ -19,6 +19,7 @@ ARG BD_PLATFORM_BACK_BASE_URL
 ARG BD_VIEWER_BASE_URL
 ARG BD_CONNECT_URL
 ARG BD_MAPBOX_TOKEN
+ARG BD_MAX_UPLOAD_SIZE
 
 ENV BD_APP_URL=$BD_APP_URL
 ENV BD_APP_URL=$BD_APP_URL
@@ -30,6 +31,7 @@ ENV BD_PLATFORM_BACK_BASE_URL=$BD_PLATFORM_BACK_BASE_URL
 ENV BD_VIEWER_BASE_URL=$BD_VIEWER_BASE_URL
 ENV BD_CONNECT_URL=$BD_CONNECT_URL
 ENV BD_MAPBOX_TOKEN=$BD_MAPBOX_TOKEN
+ENV BD_MAX_UPLOAD_SIZE=$BD_MAX_UPLOAD_SIZE
 
 RUN npm run build
 
