--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@bimdata/bimdata-api-client": "~6.2.0",
     "@bimdata/bimobject-viewer-plugin": "^0.2.1",
     "@bimdata/gltf-extractor-viewer-plugin": "^0.0.2",
+    "@bimdata/realiz3d-viewer-plugin": "0.0.1",
     "@bimdata/utils": "0.2.3",
-    "@bimdata/viewer": "0.8.2",
+    "@bimdata/viewer": "0.8.3",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.28",
     "isemail": "^3.2.0",
