disable docker cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,8 +53,7 @@ jobs:
     <<: *container_config
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - add_ssh_keys
       - run: *mapping-var-env
       - run: *docker-sign-in
@@ -101,8 +100,7 @@ jobs:
   deploy:
     <<: *container_config
     steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - run: *docker-sign-in
       - run: *mapping-var-env
       - run:
