add svg extractor plugin

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@bimdata/bimobject-viewer-plugin": "^0.2.1",
     "@bimdata/gltf-extractor-viewer-plugin": "^0.0.2",
     "@bimdata/realiz3d-viewer-plugin": "0.0.1",
+    "@bimdata/svg-extractor-viewer-plugin": "0.0.1",
     "@bimdata/utils": "0.2.3",
     "@bimdata/viewer": "0.8.7",
     "axios": "^0.19.0",
