--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "BIMData.io Platform",
   "main": "index.js",
   "scripts": {
-    "serve": "NODE_OPTIONS=--max_old_space_size=4096 webpack-dev-server --progress --config build/webpack.config.dev.js --port 8080",
+    "serve": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --config build/webpack.config.dev.js --port 8080",
     "build": "node --max-old-space-size=4000 ./node_modules/.bin/webpack --config build/webpack.config.prod.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
@@ -27,10 +27,11 @@
     "@bimdata/bimdata-api-client": "~6.2.0",
     "@bimdata/bimobject-viewer-plugin": "^0.2.1",
     "@bimdata/gltf-extractor-viewer-plugin": "^0.0.2",
+    "@bimdata/iot-viewer-plugin": "0.0.2",
     "@bimdata/realiz3d-viewer-plugin": "0.0.1",
     "@bimdata/svg-extractor-viewer-plugin": "0.0.2",
     "@bimdata/utils": "0.2.3",
-    "@bimdata/viewer": "0.8.7",
+    "@bimdata/viewer": "0.8.8",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.28",
     "isemail": "^3.2.0",
