--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@bimdata/svg-extractor-viewer-plugin": "1.0.0",
     "@bimdata/idex-viewer-plugin": "0.0.2",
     "@bimdata/utils": "0.2.3",
-    "@bimdata/viewer": "1.0.9",
+    "@bimdata/viewer": "next",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.28",
     "isemail": "^3.2.0",
