--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "BIMData.io Platform",
   "main": "index.js",
   "scripts": {
-    "serve": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --config build/webpack.config.dev.js --port 8080",
+    "serve": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --config build/webpack.config.dev.js --port 8081",
     "build": "node --max-old-space-size=4000 ./node_modules/.bin/webpack --config build/webpack.config.prod.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:fix": "eslint --ext .js,.vue src --fix",
@@ -26,11 +26,12 @@
     "@bimdata/background-color-viewer-plugin": "1.0.0",
     "@bimdata/bimdata-api-client": "~6.2.0",
     "@bimdata/bimobject-viewer-plugin": "^1.0.0",
+    "@bimdata/christmas-sleigh-viewer-plugin": "^1.0.1",
     "@bimdata/gltf-extractor-viewer-plugin": "^1.0.0",
+    "@bimdata/idex-viewer-plugin": "0.0.5",
     "@bimdata/iot-viewer-plugin": "1.0.3",
     "@bimdata/realiz3d-viewer-plugin": "0.0.2",
     "@bimdata/svg-extractor-viewer-plugin": "1.0.0",
-    "@bimdata/idex-viewer-plugin": "0.0.5",
     "@bimdata/utils": "0.2.3",
     "@bimdata/viewer": "next",
     "axios": "^0.19.0",
