--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@bimdata/bimdata-api-client": "~6.2.0",
     "@bimdata/bimobject-viewer-plugin": "^1.0.0",
     "@bimdata/gltf-extractor-viewer-plugin": "^1.0.0",
-    "@bimdata/iot-viewer-plugin": "1.0.6",
+    "@bimdata/idex-viewer-plugin": "0.0.7",
+    "@bimdata/iot-viewer-plugin": "^1.0.7",
     "@bimdata/realiz3d-viewer-plugin": "0.0.2",
     "@bimdata/svg-extractor-viewer-plugin": "1.0.0",
-    "@bimdata/idex-viewer-plugin": "0.0.7",
     "@bimdata/utils": "0.2.3",
     "@bimdata/viewer": "next",
     "axios": "^0.21.1",
